# fate

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/basic2/: CMakeLists.txt  main.cpp
examples/movement/: CMakeLists.txt  main.cpp
examples/pong/: CMakeLists.txt  gamescene.cpp  gamescene.h  main.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cpp  scene.cpp  time.cpp
src/entity/: CMakeLists.txt  entity.cpp
src/include/fate/: component_camera.h  component_render.h  component_transform.h  core.h  entity.h  gamestate.h  input.h  log.h  math.h  random.h  renderer.h  resource.h  scene.h  shader.h  sprite.h  time.h  window.h
src/input/: CMakeLists.txt  input.cpp
src/log/: CMakeLists.txt  log.cpp
src/math/: CMakeLists.txt  random.cpp
src/renderer/: CMakeLists.txt  renderer.cpp  shader.cpp  sprite.cpp
src/resource/: CMakeLists.txt  resource.cpp
src/shaders/: CMakeLists.txt
src/shaders/simple/: cubes.fshader  cubes.vshader
src/shaders/sprite/: sprite.fshader  sprite.vshader  varying.def.sc
src/window/: CMakeLists.txt  window.cpp
tools/linux/: texturec  texturev
